--- a/demo.html
+++ b/demo.html
@@ -6,5 +6,7 @@
 
 	OK so here i am putting some text. Going to practice merging, resolving conflicts, etc. Also unstaging, adding things to .gitignore and removing them from the repo. ***
 
+	here is some text i will add in a second commit
+
 </body>
 </html>
