what does this commit do

--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,8 @@
 	hey now let's create a conflict!
 
 	also to consider: fast forwarding, reverting, resetting
+	
+	OK so apparently VSCODE works well for conflict resolution
 
 	i bet this line will create a conflict
 
